--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "fuse.js": "^7.1.0",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10"
   }
