--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles",
     "start": "node ./bin/www"
   },
   "author": "",
@@ -17,5 +17,11 @@
     "fuse.js": "^7.1.0",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "axios-mock-adapter": "^2.1.0",
+    "cross-env": "^7.0.3",
+    "jest": "^30.0.5",
+    "supertest": "^7.1.4"
   }
 }
