--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest --verbose"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^3.8.0",
