--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "axios-mock-adapter": "^2.1.0",
     "cross-env": "^7.0.3",
     "jest": "^30.0.5",
-    "supertest": "^7.1.4"
+    "supertest": "^7.1.4",
+    "ts-node": "^10.9.2"
   }
 }
