--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
   "devDependencies": {
     "axios-mock-adapter": "^2.1.0",
     "cross-env": "^7.0.3",
+    "fast-check": "^4.2.0",
     "jest": "^30.0.5",
+    "jest-fuzz": "^0.1.2",
     "supertest": "^7.1.4",
     "ts-node": "^10.9.2"
   }
