--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "react-loading-skeleton": "^3.5.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
