--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@vis.gl/react-google-maps": "^1.5.4",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "emailjs": "^4.0.3",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
