--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,14 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "fuse.js": "^7.1.0",
+    "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
     "nodemon": "^3.1.10",
     "stripe": "^18.3.0"
   },
   "devDependencies": {
+    "axios": "^1.11.0",
     "axios-mock-adapter": "^2.1.0",
     "cross-env": "^7.0.3",
     "fast-check": "^4.2.0",
