--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "react-loading-skeleton": "^3.5.0",
     "vite": "^6.3.5"
   }
 }
