--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "mysql": "^2.18.1",
     "react-loading-skeleton": "^3.5.0"
   },
-  "devDependencies": {
-    "cypress": "^14.5.3"
-  },
   "name": "escwebapp",
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "version": "1.0.0",
@@ -24,5 +21,8 @@
   "dev": "vite --host",
   "cross-env": "^7.0.3",
   "jest": "^30.0.5",
-  "supertest": "^7.1.4"
+  "supertest": "^7.1.4",
+  "devDependencies": {
+    "cypress": "^14.5.4"
+  }
 }
