--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles --verbose",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build": "cd ../client && npm install && npm run dev"
   },
   "author": "",
   "license": "ISC",
