--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles --verbose",
     "start": "node ./bin/www",
-    "build": "cd ../client && npm install && npm run dev"
+    "build": "cd ../client && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
