--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles --verbose",
-    "start": "nodemon ./bin/www",
-    "build": "cd ../client && rm -rf node_modules package-lock.json && npm install && npm run build"
+    "start": "nodemon ./bin/www"
   },
   "author": "",
   "license": "ISC",
